fix: Headings not breaking when words are too long for viewport

--- a/src/css/Blocks/heading.css
+++ b/src/css/Blocks/heading.css
@@ -3,6 +3,8 @@
   font-size: 2em;
   margin-bottom: var(--spacing-s);
   position: relative;
+  word-break: break-word;
+  hyphens: auto;
 }
 
 .heading--light {
